# distributeddatamgr_data_object

./: .clang-format  AGENTS.md  CMakeLists.txt  CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  data_object.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
base/: BUILD.gn
base/include/: ashmem.h  auto_launch_export.h  common_errors.h  common_timer_errors.h  data_value.h  datetime_ex.h  directory_ex.h  errors.h  file_ex.h  flat_obj.h  get_query_info.h  intercepted_data.h  iprocess_communicator.h  iprocess_system_api_adapter.h  kv_store_changed_data.h  kv_store_delegate.h  kv_store_delegate_manager.h  kv_store_errno.h  kv_store_nb_conflict_data.h  kv_store_nb_delegate.h  kv_store_observer.h  kv_store_result_set.h  kv_store_snapshot_delegate.h  native_common.h  native_value.h  nocopyable.h  observer.h  parcel.h  pubdef.h  query.h  query_expression.h  refbase.h  rwlock.h  safe_block_queue.h  safe_map.h  safe_queue.h  securec.h  securec_p.h  securectype.h  semaphore_ex.h  (+12 more)
base/include/hilog/: log.h
base/include/napi/: native_api.h  (+1 more)
base/src/: ashmem.cpp  datetime_ex.cpp  directory_ex.cpp  event_demultiplexer.cpp  event_demultiplexer.h  event_handler.cpp  event_handler.h  event_reactor.cpp  event_reactor.h  file_ex.cpp  observer.cpp  parcel.cpp  refbase.cpp  rwlock.cpp  semaphore_ex.cpp  string_ex.cpp  thread_ex.cpp  thread_pool.cpp  timer.cpp  timer_event_handler.cpp  timer_event_handler.h  unicode_ex.cpp  unicode_ex.h
base/test/: BUILD.gn
docs/: architecture.md  build-and-test.md  code-map.md  error_code_layers.md  js-api.md  native-implementation.md  synchronization-mechanism.md  testing.md
frameworks/ets/taihe/ohos.data.distributedDataObject/: BUILD.gn
frameworks/ets/taihe/ohos.data.distributedDataObject/idl/: ohos.data.commonType.taihe  ohos.data.distributedDataObject.taihe
frameworks/ets/taihe/ohos.data.distributedDataObject/idl_lite/: ohos.data.distributedDataObject.taihe
frameworks/ets/taihe/ohos.data.distributedDataObject/include/: ani_dataobject_session.h  ani_error_utils.h  ani_notifier_impl.h  ani_progress_notifier_impl.h  ani_utils.h  ani_watcher.h  ohos.data.distributedDataObject.DataObject.h  ohos.data.distributedDataObject.DataObject.hpp
frameworks/ets/taihe/ohos.data.distributedDataObject/src/: ani_constructor.cpp  ani_dataobject_session.cpp  ani_error_utils.cpp  ani_notifier_impl.cpp  ani_progress_notifier_impl.cpp  ani_utils.cpp  ani_watcher.cpp  ohos.data.distributedDataObject.DataObject.cpp  ohos.data.distributedDataObject.impl.cpp
frameworks/innerkitsimpl/test/fuzztest/objectstore_fuzzer/: BUILD.gn  objectstore_fuzzer.cpp  objectstore_fuzzer.h
frameworks/innerkitsimpl/test/unittest/: BUILD.gn  object_store_test.cpp
frameworks/innerkitsimpl/test/unittest/mock/include/: mock_app_data_change_listener.h  mock_app_device_change_listener.h  mock_flat_object_watcher.h  mock_object_watcher.h  mock_permission_utils.h  mock_system_ability_manager.h  system_ability_manager_mock.h
frameworks/innerkitsimpl/test/unittest/mock/src/: mock_permission_utils.cpp  mock_soft_bus.cpp  mock_system_ability_manager.cpp
frameworks/innerkitsimpl/test/unittest/src/: app_device_handler_test.cpp  app_pipe_mgr_test.cpp  asset_change_timer_test.cpp  client_adaptor_mock_test.cpp  client_adaptor_test.cpp  communicator_test.cpp  distributed_object_impl_test.cpp  distributed_object_store_impl_test.cpp  flat_object_store_test.cpp  mock_system_ability_manager_test.cpp  object_callback_stub_test.cpp  object_radar_reporter_test.cpp  object_service_proxy_additional_test.cpp  object_service_proxy_test.cpp  object_store_test.cpp  object_types_util_test.cpp  process_communicator_impl_test.cpp  task_scheduler_test.cpp
frameworks/jskitsimpl/collaboration_edit/: BUILD.gn
frameworks/jskitsimpl/collaboration_edit/include/: js_utils.h  log_print.h  napi_abstract_type.h  napi_async_call.h  napi_cloud_db.h  napi_collaboration_edit_object.h  napi_const_properties.h  napi_edit_unit.h  napi_errno.h  napi_error_utils.h  napi_node.h  napi_parser.h  napi_sync_service.h  napi_text.h  napi_undo_manager.h  napi_utils.h
frameworks/jskitsimpl/collaboration_edit/src/: entry_point.cpp  js_utils.cpp  napi_abstract_type.cpp  napi_async_call.cpp  napi_cloud_db.cpp  napi_collaboration_edit_object.cpp  napi_const_properties.cpp  napi_edit_unit.cpp  napi_error_utils.cpp  napi_node.cpp  napi_parser.cpp  napi_sync_service.cpp  napi_text.cpp  napi_undo_manager.cpp  napi_utils.cpp
frameworks/jskitsimpl/collaboration_edit/test/: BUILD.gn
frameworks/jskitsimpl/collaboration_edit/test/unittest/: config.json
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/: BUILD.gn  Test.json
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/AppScope/: app.json
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/AppScope/resources/base/element/: string.json
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/entry/src/main/: module.json
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/entry/src/main/ets/Application/: AbilityStage.ts
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/entry/src/main/ets/test/: EditUnit.ets  List.test.ets  Node.ets  RunTest.ets  SetCloudDb.ets  Text.ets  UndoRedo.ets
frameworks/jskitsimpl/collaboration_edit/test/unittest/collaboration_edit_js_test/signature/: openharmony_sx.p7b
frameworks/jskitsimpl/collaboration_edit/test/unittest/src/: BUILD.gn  CloudDbMock.js  CollaborationEditUnit.test.js  CollaborationGetEditObject.test.js  CollaborationNode.test.js  CollaborationSetCloudDb.test.js  CollaborationText.test.js  CollaborationUndoRedo.test.js
interfaces/innerkits/: BUILD.gn  asset_value.h  cfi_blocklist.txt  distributed_object.h  distributed_objectstore.h  libnative_dataobject.versionscript  object_types.h  objectstore_errors.h
interfaces/jskits/: BUILD.gn  distributed_data_object.js
samples/distributedNotepad/: ReadMe.md
samples/distributedPainter/: build.gradle
(+272 files in other folders)
