# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/data_object/data_object.gni")
module_output_path = "data_object/impl"

data_object_base_path = "//foundation/distributeddatamgr/data_object"

data_object_innerkits_path = "${data_object_base_path}/frameworks/innerkitsimpl"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "./mock/include",
    "${data_object_innerkits_path}/include/adaptor",
    "${data_object_innerkits_path}/include/common",
    "${data_object_innerkits_path}/include/communicator",
    "${data_object_innerkits_path}/include",
    "${data_object_base_path}/interfaces/innerkits",
    "${data_object_base_path}/frameworks/innerkitsimpl/include/adaptor",
    "${data_object_base_path}/frameworks/jskitsimpl/include/adaptor",
    "${data_object_base_path}/frameworks/jskitsimpl/include/common",
  ]
}

common_external_deps = [
  "ability_base:want",
  "access_token:libaccesstoken_sdk",
  "access_token:libnativetoken",
  "access_token:libtoken_setproc",
  "bundle_framework:appexecfwk_core",
  "c_utils:utils",
  "device_manager:devicemanagersdk",
  "dsoftbus:softbus_client",
  "ffmpeg:libohosffmpeg",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "hitrace:hitrace_meter",
  "hitrace:libhitracechain",
  "image_framework:image",
  "image_framework:image",
  "image_framework:image_native",
  "image_framework:pixelmap",
  "ipc:ipc_core",
  "kv_store:distributeddata_inner",
  "kv_store:distributeddata_mgr",
  "kv_store:distributeddb",
  "libexif:libexif",
  "samgr:samgr_proxy",
]

ohos_unittest("NativeObjectStoreTest") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_output_path

  sources = [
    "mock/src/mock_soft_bus.cpp",
    "src/app_pipe_mgr_test.cpp",
    "src/communicator_test.cpp",
    "src/object_store_test.cpp",
    "src/process_communicator_impl_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  deps = [
    "//foundation/distributeddatamgr/data_object/interfaces/innerkits:distributeddataobject_static",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("ObjectTypesUtilTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_types_util.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/object_types_util_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps
}

ohos_unittest("ObjectServiceProxyTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_service_proxy.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_types_util.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/object_service_proxy_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps
}

ohos_unittest("ObjectCallbackStubTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/object_callback_impl.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_callback_stub.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_service_proxy.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_types_util.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/object_callback_stub_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
}

ohos_unittest("AssetChangeTimerTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/asset_change_timer.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/client_adaptor.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/flat_object_store.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_service_proxy.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_types_util.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/asset_change_timer_test.cpp",
    "${data_object_base_path}/frameworks/jskitsimpl/src/adaptor/js_watcher.cpp",
    "${data_object_base_path}/frameworks/jskitsimpl/src/common/js_util.cpp",
    "${data_object_base_path}/frameworks/jskitsimpl/src/common/uv_queue.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
  deps = [ "${data_object_base_path}/interfaces/innerkits:distributeddataobject_static" ]
}

ohos_unittest("ClientAdaptorTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/client_adaptor.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_service_proxy.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/object_types_util.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/client_adaptor_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
}

ohos_unittest("DistributedObjectStoreImplTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/distributed_object_store_impl.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/flat_object_storage_engine.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/distributed_object_store_impl_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
}

ohos_unittest("FlatObjectStoreTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/flat_object_storage_engine.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/flat_object_store.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/flat_object_store_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
  deps = [ "${data_object_base_path}/interfaces/innerkits:distributeddataobject_static" ]
}

ohos_unittest("DistributedObjectImplTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/adaptor/distributed_object_impl.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/distributed_object_impl_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
  deps = [ "${data_object_base_path}/interfaces/innerkits:distributeddataobject_static" ]
}

ohos_unittest("AppDeviceHandlerTest") {
  module_out_path = module_output_path

  sources = [
    "${data_object_base_path}/frameworks/innerkitsimpl/src/communicator/app_device_handler.cpp",
    "${data_object_base_path}/frameworks/innerkitsimpl/test/unittest/src/app_device_handler_test.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  defines = [
    "private = public",
    "protected = public",
  ]
  deps = [ "${data_object_base_path}/interfaces/innerkits:distributeddataobject_static" ]
}

group("unittest") {
  testonly = true
  deps = []
  deps += [
    ":AppDeviceHandlerTest",
    ":AssetChangeTimerTest",
    ":ClientAdaptorTest",
    ":DistributedObjectImplTest",
    ":DistributedObjectStoreImplTest",
    ":FlatObjectStoreTest",
    ":NativeObjectStoreTest",
    ":ObjectCallbackStubTest",
    ":ObjectServiceProxyTest",
    ":ObjectTypesUtilTest",
  ]
}
