# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/distributeddatamgr/data_object/data_object.gni")
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../../../../../frameworks/innerkitsimpl/include/adaptor",
    "../../../../../frameworks/innerkitsimpl/include/common",
    "${data_object_base_path}/frameworks/innerkitsimpl/include",
    "${relational_store_path}/interfaces/inner_api/common_type/include",
  ]
}

##############################fuzztest##########################################
ohos_fuzztest("ObjectStoreFuzzTest") {
  module_out_path = "data_object/data_object"

  fuzz_config_file = "//foundation/distributeddatamgr/data_object/frameworks/innerkitsimpl/test/fuzztest/objectstore_fuzzer"

  sources = [ "objectstore_fuzzer.cpp" ]

  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/data_object/interfaces/innerkits:distributeddataobject_static",
    "//foundation/distributeddatamgr/kv_store/frameworks/libs/distributeddb:distributeddb",
  ]

  external_deps = [ "hilog:libhilog" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ObjectStoreFuzzTest",
  ]
}

###############################################################################

