# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "data_object/collaboration_edit"

ohos_js_stage_unittest("CollaborationEditJsTest") {
  hap_profile = "entry/src/main/module.json"
  deps = [
    ":collaborationeditjstest_js_assets",
    ":collaborationeditjstest_resources",
  ]
  ets2abc = true
  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "CollaborationEditJsTest"
  subsystem_name = "distributeddatamgr"
  part_name = "data_object"
  module_out_path = module_out_path
}

ohos_app_scope("collaborationeditjstest_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_js_assets("collaborationeditjstest_js_assets") {
  source_dir = "entry/src/main/ets"
}

ohos_resources("collaborationeditjstest_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":collaborationeditjstest_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
